force-app/main/default/objects/Timesheet__c/fields/Lunch_End__c.field-meta.xml
<CustomField>
    <fullName>Lunch_End__c</fullName>
    <label>Lunch End</label>
    <type>Time</type>
</CustomField>