force-app/main/default/objects/Timesheet__c/fields/Lunch_Start__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Start__c</fullName>
    <label>Lunch Start</label>
    <type>Time</type>
</CustomField>