force-app/main/default/objects/Timesheet__c/fields/Monthly_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Timesheet__c</fullName>
    <label>Monthly Timesheet</label>
    <referenceTo>Monthly_Timesheet__c</referenceTo>
    <relationshipLabel>Timesheets</relationshipLabel>
    <relationshipName>Timesheets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>