force-app/main/default/objects/Timesheet__c/fields/Overtime_Hours__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Overtime Hours</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>