force-app/main/default/objects/Timesheet__c/fields/Paid_Time_Off__c.field-meta.xml
<CustomField>
    <fullName>Paid_Time_Off__c</fullName>
    <label>Paid Time Off</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>