force-app/main/default/objects/Timesheet__c/fields/Regular_Hours__c.field-meta.xml
<CustomField>
    <fullName>Regular_Hours__c</fullName>
    <formula>((End_Time__c -  Start_Time__c )-( Lunch_End__c -  Lunch_Start__c )- Paid_Time_Off__c ) / 3600000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regular Hours</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>