force-app/main/default/objects/Timesheet__c/fields/Supervisor_Approved__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supervisor Approved</label>
    <type>Checkbox</type>
</CustomField>