force-app/main/default/objects/Timesheet__c/fields/Total_Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Work_Hours__c</fullName>
    <formula>Regular_Hours__c +  Overtime_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Work Hours</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>