force-app/main/default/objects/Timesheet__c/fields/Work_from_Home__c.field-meta.xml
<CustomField>
    <fullName>Work_from_Home__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Work from Home</label>
    <type>Checkbox</type>
</CustomField>